# OpenSourceLens

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow/dags/: aggregation_dag.py  ingest_local_dag.py  transformation_dag.py
local_data/datalake/github_commits/gold/branch_activity_distribution/metadata/: .f19584e5-b042-4265-8150-78baf38815fe-m0.avro.crc  .snap-1501003245283019610-1-f19584e5-b042-4265-8150-78baf38815fe.avro.crc  .v1.metadata.json.crc  f19584e5-b042-4265-8150-78baf38815fe-m0.avro  snap-1501003245283019610-1-f19584e5-b042-4265-8150-78baf38815fe.avro  v1.metadata.json
local_data/datalake/github_commits/gold/contributor_consistency/metadata/: .8209e621-eb25-4d6c-ac24-13f61fe973e1-m0.avro.crc  .snap-8779062845393650082-1-8209e621-eb25-4d6c-ac24-13f61fe973e1.avro.crc  .v1.metadata.json.crc  v1.metadata.json  (+2 more)
local_data/datalake/github_commits/silver/metadata/: .0c0f9ab2-730a-4a94-b698-ec5d692ac844-m0.avro.crc  .snap-6516553241435209312-1-0c0f9ab2-730a-4a94-b698-ec5d692ac844.avro.crc  .v1.metadata.json.crc  0c0f9ab2-730a-4a94-b698-ec5d692ac844-m0.avro  snap-6516553241435209312-1-0c0f9ab2-730a-4a94-b698-ec5d692ac844.avro  v1.metadata.json
scripts/: debug_download.py  ingest_hourly.py  ingest_utils.py
src/gh_archive_pipeline/scripts/: ingest_hourly.py
src/gh_archive_pipeline/transformation/: bronze_to_silver.py  silver_to_gold.py
src/gh_archive_pipeline/utils/: ingest_utils.py  logger_util.py  spark_helper.py
transformation/: bronze_to_silver.py  silver_to_gold.py
utils/: ingest_utils.py  scrap_utils.py  spark_helper.py
(+58 files in other folders)
